HTML4 support (IE)

--- a/demo/site/data.html
+++ b/demo/site/data.html
@@ -2,4 +2,8 @@
 	<a href="project1" class="nav">Project 1</a> | 
 	<a href="project2" class="nav">Project 2</a> | 
 	<a href="project3" class="nav">Project 3</a> 
+
+	<br />
+
+	<a href="project2/pic2" class="nav">Project 2, pic 2</a> 
 </div>
