multiple content target support

--- a/demo/site/project2/data.html
+++ b/demo/site/project2/data.html
@@ -1,3 +1,6 @@
+<div data-contenttarget="#title_area" data-transitionin="fadeIn" data-transitionout="fadeOut">
+	PROJECT 2
+</div>
 <div data-contenttarget="" data-transitionin="projectIn" data-transitionout="projectOut">
 	<div class="client">Client 2</div>
 
@@ -8,4 +11,4 @@
 	<a class="nav" href="pic1">A</a>
 	<a class="nav" href="pic2">B</a>
 	<a class="nav" href="pic3">C</a>
-</div>	
+</div>
