--- a/demo/site/project2/pic2/data.html
+++ b/demo/site/project2/pic2/data.html
@@ -1,4 +1,6 @@
-<h2>B</h2>
-<img src="B.png" />
+<div data-contenttarget="" data-transitionin="fadeIn" data-transitionout="fadeOut">
+	<h2>B</h2>
+	<img src="B.png" />
 
-<a href="../" class="nav">../</a> 
+	<a href="../" class="nav">../</a>
+</div>	
