--- a/demo/site/project3/data.html
+++ b/demo/site/project3/data.html
@@ -1,3 +1,6 @@
+<div data-contenttarget="#title_area" data-transitionin="fadeIn" data-transitionout="fadeOut">
+	PROJECT 3
+</div>
 <div data-contenttarget="" data-transitionin="projectIn" data-transitionout="projectOut">
 	<div class="client">Client 3</div>
 
