--- a/demo/site/project3/pic1/data.html
+++ b/demo/site/project3/pic1/data.html
@@ -1,2 +1,4 @@
-<h2>A</h2>
-<img src="A.png" />
+<div data-contenttarget="" data-transitionin="fadeIn" data-transitionout="fadeOut">
+	<h2>A</h2>
+	<img src="A.png" />
+</div>	
