--- a/demo/site/project1/data.html
+++ b/demo/site/project1/data.html
@@ -1,4 +1,4 @@
-<div data-contenttarget="" data-transitionin="projectIn" data-transitionout="projectOut">
+<!-- <div data-contenttarget="" data-transitionin="projectIn" data-transitionout="projectOut"> -->
 	<div class="client">Client 1</div>
 
 	<a class="link"></a>
@@ -8,4 +8,4 @@
 	<a class="nav" href="pic1">1</a>
 	<a class="nav" href="pic2">2</a>
 	<a class="nav" href="pic3">3</a>
-</div>	
+<!-- </div>	 -->
