--- a/demo/site/project1/pic3/data.html
+++ b/demo/site/project1/pic3/data.html
@@ -1,2 +1,4 @@
-Image 3
-<img src="3.png" />
+<div data-contenttarget="" data-transitionin="fadeIn" data-transitionout="fadeOut">
+	Image 3
+	<img src="3.png" />
+</div>	
