--- a/demo/site/project2/pic3/data.html
+++ b/demo/site/project2/pic3/data.html
@@ -1,2 +1,4 @@
-<h2>C</h2>
-<img src="C.png" />
+<div data-contenttarget="" data-transitionin="fadeIn" data-transitionout="fadeOut">
+	<h2>C</h2>
+	<img src="C.png" />
+</div>
