--- a/demo/site/project3/pic2/data.html
+++ b/demo/site/project3/pic2/data.html
@@ -1,2 +1,4 @@
-<h2>B</h2>
-<img src="B.png" />
+<div data-contenttarget="" data-transitionin="fadeIn" data-transitionout="fadeOut">
+	<h2>B</h2>
+	<img src="B.png" />
+</div>
