--- a/demo/site/project1/data.html
+++ b/demo/site/project1/data.html
@@ -1,4 +1,8 @@
-<!-- <div data-contenttarget="" data-transitionin="projectIn" data-transitionout="projectOut"> -->
+<div data-contenttarget="#title_area" data-transitionin="fadeIn" data-transitionout="fadeOut">
+	PROJECT 1
+</div>
+
+<div data-contenttarget="" data-transitionin="projectIn" data-transitionout="projectOut">
 	<div class="client">Client 1</div>
 
 	<a class="link"></a>
@@ -8,4 +12,4 @@
 	<a class="nav" href="pic1">1</a>
 	<a class="nav" href="pic2">2</a>
 	<a class="nav" href="pic3">3</a>
-<!-- </div>	 -->
+</div>	
