--- a/demo/site/project2/pic2/data.html
+++ b/demo/site/project2/pic2/data.html
@@ -1,6 +1,6 @@
-<div data-contenttarget="" data-transitionin="fadeIn" data-transitionout="fadeOut">
+<span data-transitionin="fadeIn" data-transitionout="fadeOut">
 	<h2>B</h2>
 	<img src="B.png" />
 
 	<a href="../" class="nav">../</a>
-</div>	
+</span>	
